--- a/Letter.html
+++ b/Letter.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>letter</title>
-  <link rel="stylesheet" href="./letter.css">
+  <link rel="stylesheet" href="./style.css">
 </head>
 <body>
   <div class="envlope-wrapper">
@@ -31,6 +31,6 @@
     <button id="reset">Reset</button>
   </div>
   <script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js'></script>
-  <script src="./letter.js"></script>
+  <script src="./script.js"></script>
 </body>
 </html>
