--- a/Letter.html
+++ b/Letter.html
@@ -5,7 +5,7 @@
   <title>letter</title>
   <link rel="stylesheet" href="./style.css">
 </head>
-<body>
+<body class="letter-page">
   <div class="envlope-wrapper">
     <div id="envelope" class="close">
       <div class="front flap"></div>
