--- a/index.html
+++ b/index.html
@@ -28,11 +28,11 @@
       <div class="shadow"></div>
       <div class="label">
          <div class="icon">
-            <i class="fas fa-birthday-cake"></i>
+            <i class="fas fa-question"></i>
          </div>
          <div class="info">
             <div class="main">Chapter 2</div>
-            <div class="sub">Happy Birthday</div>
+            <div class="sub">???</div>
          </div>
       </div>
    </div>
